--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.38.0",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "joi-objectid": "^4.0.2",
