--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@getbrevo/brevo": "^1.0.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.38.0",
     "config": "^3.3.9",
@@ -21,6 +23,9 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
+    "sendmail": "^1.6.1",
+    "sib-api-v3-sdk": "^8.5.0",
     "winston": "^3.10.0"
   }
 }
